--- a/01-GNB/01/css/style.css
+++ b/01-GNB/01/css/style.css
@@ -50,13 +50,14 @@ header nav {
 
 .submenu {
   position: absolute;
-  top: 48px;
+  top: 43px;
   left: 0;
   width: 100%;
   /* jQuery 동작을 만들기 위한 준비 
   op0은 클래스 줬다뺐다할때 씀
   그 이외는 dn 사용 */
   display: none;
+  padding-top: 30px;
 }
 .submenu li a {
   display: block;
@@ -65,6 +66,11 @@ header nav {
   text-align: center;
   background: #333;
   color: #fff;
+}
+
+/* 활성화된 메뉴 디자인 */
+.gnb > li.on {
+  background: skyblue;
 }
 
 .inner {
