--- a/plug-in/02-fullpage/css/style.css
+++ b/plug-in/02-fullpage/css/style.css
@@ -78,6 +78,9 @@ main > section.section3 {
 main > section.section4 {
   background: blue;
 }
+main > section h2 {
+  font-size: 5vw;
+}
 #footer {
   height: 50px;
   line-height: 50px;
